--- a/jbot-example/src/main/resources/application.properties
+++ b/jbot-example/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jackson.property-naming-strategy=SNAKE_CASE
 
 # slack integrations
 rtmUrl=https://slack.com/api/rtm.start?token={token}&simple_latest&no_unreads
-slackBotToken=xoxb-303093386311-OsQsjktSi8isqzhcyk7TUMFx
+slackBotToken=[token]
 slashCommandToken=X73Fv3Tokenx242CdpEq
 slackIncomingWebhookUrl=https://hooks.slack.com/services/T025DUwebhookurloOYvPiHL7y6
